@@ -2712,22 +2712,20 @@ void	substitute_macros(DB_EVENT *event, DB_ESCALATION *escalation, char **data)
  ******************************************************************************/
 static int	substitute_functions(char **exp, time_t now, char *error, int maxerrlen)
 {
-#define ID_LEN 21
-	char	functionid[ID_LEN], *e, *f;
-	char	*out = NULL;
-	int	out_alloc = 64, out_offset = 0;
-	char	value[MAX_BUFFER_LEN];
+	const char	*__function_name = "substitute_functions";
 
 	DB_RESULT	result;
 	DB_ROW		row;
 	DB_ITEM		item;
-	DB_FUNCTION	function;
+	char		functionid[MAX_ID_LEN], value[MAX_BUFFER_LEN], *e, *f, *out = NULL;
+	int		out_alloc = 64, out_offset = 0;
 
-	zabbix_log(LOG_LEVEL_DEBUG, "In substitute_functions(%s)",
-			*exp);
+	zabbix_log(LOG_LEVEL_DEBUG, "In %s() expression:'%s'", __function_name, *exp);
 
 	if (**exp == '\0')
 		goto empty;
+
+	*error = '\0';
 
 	out = zbx_malloc(out, out_alloc);
 
@@ -2739,7 +2737,7 @@ static int	substitute_functions(char **exp, time_t now, char *error, int maxerrl
 			f = functionid;
 			while (*e != '}' && *e != '\0')
 			{
-				if (functionid - f == ID_LEN)
+				if (functionid - f == MAX_ID_LEN)
 					break;
 				if (*e < '0' || *e > '9')
 					break;
@@ -2757,37 +2755,47 @@ static int	substitute_functions(char **exp, time_t now, char *error, int maxerrl
 			e++;	/* '}' */
 
 			result = DBselect(
-					"select distinct %s,f.function,f.parameter from %s,functions f"
+					"select distinct %s,f.function,f.parameter,h.status from %s,functions f"
 					" where i.hostid=h.hostid and i.itemid=f.itemid and f.functionid=%s",
 					ZBX_SQL_ITEM_FIELDS,
 					ZBX_SQL_ITEM_TABLES,
 					functionid);
 
-			row = DBfetch(result);
-
-			if (NULL == row)
+			if (NULL == (row = DBfetch(result)))
 			{
 				zbx_snprintf(error, maxerrlen, "Could not obtain function and item for functionid: %s",
 						functionid);
-				DBfree_result(result);
-				goto error;
 			}
 			else
 			{
+				const char	*function, *parameter;
+				unsigned char	host_status;
+
 				DBget_item_from_db(&item, row);
 
-				function.function	= row[ZBX_SQL_ITEM_FIELDS_NUM];
-				function.parameter	= row[ZBX_SQL_ITEM_FIELDS_NUM + 1];
+				function = row[ZBX_SQL_ITEM_FIELDS_NUM];
+				parameter = row[ZBX_SQL_ITEM_FIELDS_NUM + 1];
+				host_status = (unsigned char)atoi(row[ZBX_SQL_ITEM_FIELDS_NUM + 2]);
 
-				if (FAIL == evaluate_function(value, &item, function.function, function.parameter, now))
-				{
-					zbx_snprintf(error, maxerrlen, "Evaluation failed for function: %s", function.function);
-					DBfree_result(result);
-					goto error;
-				}
+				if (ITEM_STATUS_DISABLED == item.status)
+					zbx_snprintf(error, maxerrlen, "Item disabled for function: {%s:%s.%s(%s)}",
+							item.host_name, item.key, function, parameter);
+				else if (ITEM_STATUS_NOTSUPPORTED == item.status)
+					zbx_snprintf(error, maxerrlen, "Item not supported for function: {%s:%s.%s(%s)}",
+							item.host_name, item.key, function, parameter);
+
+				if ('\0' == *error && HOST_STATUS_NOT_MONITORED == host_status)
+					zbx_snprintf(error, maxerrlen, "Host disabled for function: {%s:%s.%s(%s)}",
+							item.host_name, item.key, function, parameter);
+
+				if ('\0' == *error && SUCCEED != evaluate_function(value, &item, function, parameter, now))
+					zbx_snprintf(error, maxerrlen, "Evaluation failed for function: {%s:%s.%s(%s)}",
+							item.host_name, item.key, function, parameter);
 			}
-
 			DBfree_result(result);
+
+			if ('\0' != *error)
+				goto error;
 
 			zbx_strcpy_alloc(&out, &out_alloc, &out_offset, value);
 		}
@@ -2798,14 +2806,13 @@ static int	substitute_functions(char **exp, time_t now, char *error, int maxerrl
 
 	*exp = out;
 empty:
-	zabbix_log(LOG_LEVEL_DEBUG, "End substitute_functions() [%s]", *exp);
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s() expression:'%s'", __function_name, *exp);
 
 	return SUCCEED;
 error:
-	if (NULL != out)
-		zbx_free(out);
+	zbx_free(out);
 
-	zabbix_log(LOG_LEVEL_DEBUG, "%s", error);
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s() error:'%s'", __function_name, error);
 	zabbix_syslog("%s", error);
 
 	return FAIL;
